// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`mapStateToProps adds isLoggedIn and isSuperUser fields to the user 1`] = `
{
  "allUsers": {
    "123": {
      "id": 123,
    },
    "456": {
      "hasUnreadNotifications": undefined,
      "id": 456,
      "isLoggedIn": true,
      "isSuperUser": true,
      "unreadNotificationCount": undefined,
    },
  },
  "user": {
    "hasUnreadNotifications": undefined,
    "id": 456,
    "isLoggedIn": true,
    "isSuperUser": true,
    "unreadNotificationCount": undefined,
  },
}
`;

exports[`mapStateToProps provides the current user in denormalized form 1`] = `
{
  "allUsers": {
    "123": {
      "id": 123,
    },
    "456": {
      "hasUnreadNotifications": undefined,
      "id": 456,
      "isLoggedIn": undefined,
      "isSuperUser": undefined,
      "unreadNotificationCount": undefined,
    },
  },
  "user": {
    "hasUnreadNotifications": undefined,
    "id": 456,
    "isLoggedIn": undefined,
    "isSuperUser": undefined,
    "unreadNotificationCount": undefined,
  },
}
`;
